--- a/src/app/tabs/lipstick-finder/lipstick-finder.page.html
+++ b/src/app/tabs/lipstick-finder/lipstick-finder.page.html
@@ -1,41 +1,39 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      找口红
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            找口红
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://beta.ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://beta.ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://beta.ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://beta.ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+<ion-content style="margin: 0 1rem 1rem 0">
+    <ion-item class="spacing">
+        <ion-label>品牌</ion-label>
+        <ion-select multiple="true" ok-text="确认" cancel-text="取消">
+            <ion-select-option value="all" selected>全部</ion-select-option>
+            <ion-select-option *ngFor="let brand of brands" [value]='brand.id'>{{brand.name}}</ion-select-option>
+        </ion-select>
+    </ion-item>
+
+    <ion-item class="spacing">
+        <ion-label>类别</ion-label>
+        <ion-select multiple="true" ok-text="确认" cancel-text="取消">
+            <ion-select-option value="all" selected>全部</ion-select-option>
+            <ion-select-option *ngFor="let brand of brands" [value]='brand.id'>{{brand.name}}</ion-select-option>
+        </ion-select>
+    </ion-item>
+
+    <ion-item class="spacing">
+        <ion-label>色号</ion-label>
+        <ion-item>
+            <ion-input required type="text" placeholder="#47|星星色"></ion-input>
+        </ion-item>
+    </ion-item>
+
+    <div class="content-center" style="width:90%;margin-top: 10rem">
+        <ion-button shape="round" expand="block" color="danger" fill="outline">
+            查找
+            <ion-icon name="search"></ion-icon>
+        </ion-button>
+    </div>
 </ion-content>
