--- a/src/app/tabs/lipstick-finder/search/search.page.html
+++ b/src/app/tabs/lipstick-finder/search/search.page.html
@@ -43,7 +43,7 @@
             </ion-item>
         </ion-list>
 
-        <div class="content-center" style='width:90%'>
+        <div class="content-center">
             <ion-button shape="round" expand="block" color="danger" fill="outline"
                         (click)="search({
                             brand:select_brands.value,
