--- a/src/app/tabs/lipstick-finder/detail/detail.page.html
+++ b/src/app/tabs/lipstick-finder/detail/detail.page.html
@@ -6,43 +6,41 @@
 </ion-header>
 
 <ion-content padding>
-    <!--<div *ngIf="lipsticks$|async as lipsticks; then result else empty"></div>-->
+    <div *ngIf="sku$|async as sku; then result else empty"></div>
 
-    <!--<ng-template #empty let-lipstick>没有找到对应的口红</ng-template>-->
+    <ng-template #empty let-sku>没有找到对应的口红</ng-template>
 
-    <!--<ng-template #result let-lipstick>-->
-        <!--<ion-grid>-->
-            <!--<ion-list>-->
-                <!--<ion-item>-->
-                    <!--<ion-row class="full-width">-->
-                        <!--<ion-col size="2">口红</ion-col>-->
-                        <!--<ion-col size="1">-->
-                            <!--<div class="content-center color-block"-->
-                                 <!--[ngStyle]="{'background-color':lipstick.color}">-->
-                            <!--</div>-->
-                        <!--</ion-col>-->
-                        <!--<ion-col class="ion-text-center">-->
-                            <!--{{lipstick.goodsName}} {{lipstick.skuName}} {{lipstick.colorNo}}-->
-                        <!--</ion-col>-->
-                    <!--</ion-row>-->
-                <!--</ion-item>-->
-                <!--<ion-item>-->
-                    <!--<ion-row class="full-width">-->
-                        <!--<ion-col size="2">色号</ion-col>-->
-                        <!--<ion-col size="1">-->
-                            <!--<div class="content-center color-block"-->
-                                 <!--[ngStyle]="{'background-color':lipstick.color}">-->
-                            <!--</div>-->
-                        <!--</ion-col>-->
-                        <!--<ion-col class="ion-text-center">-->
-                            <!--{{lipstick.color.replace("#", "")|uppercase}}-->
-                        <!--</ion-col>-->
-                    <!--</ion-row>-->
-                <!--</ion-item>-->
-            <!--</ion-list>-->
-        <!--</ion-grid>-->
-        <!--<ion-button shape="round" expand="block" color="danger" fill="outline">确认</ion-button>-->
-    <!--</ng-template>-->
-
-
+    <ng-template #result let-sku>
+        <ion-grid>
+            <ion-list>
+                <ion-item>
+                    <ion-row class="full-width">
+                        <ion-col size="2">口红</ion-col>
+                        <ion-col size="1">
+                            <div class="content-center color-block"
+                                 [ngStyle]="{'background-color':sku.color}">
+                            </div>
+                        </ion-col>
+                        <ion-col class="ion-text-center">
+                            {{sku.goodsName}} {{sku.skuName}} {{sku.colorNo}}
+                        </ion-col>
+                    </ion-row>
+                </ion-item>
+                <ion-item>
+                    <ion-row class="full-width">
+                        <ion-col size="2">色号</ion-col>
+                        <ion-col size="1">
+                            <div class="content-center color-block"
+                                 [ngStyle]="{'background-color':sku.color}">
+                            </div>
+                        </ion-col>
+                        <ion-col class="ion-text-center">
+                            {{sku.color.replace("#", "")|uppercase}}
+                        </ion-col>
+                    </ion-row>
+                </ion-item>
+            </ion-list>
+        </ion-grid>
+        <ion-button shape="round" expand="block" color="danger" fill="outline">确认</ion-button>
+    </ng-template>
 </ion-content>
