--- a/src/app/tabs/lipstick-finder/detail/detail.page.html
+++ b/src/app/tabs/lipstick-finder/detail/detail.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-icon name="arrow-back" (click)="back()"></ion-icon>
-        <ion-title>查找结果</ion-title>
+        <ion-title>口红信息</ion-title>
     </ion-toolbar>
 </ion-header>
 
