--- a/src/app/tabs/lipstick-finder/result/result.page.html
+++ b/src/app/tabs/lipstick-finder/result/result.page.html
@@ -1,6 +1,8 @@
 <ion-header>
     <ion-toolbar>
-        <ion-icon name="arrow-back" (click)="back()"></ion-icon>
+        <ion-buttons slot="start">
+            <ion-back-button text=""></ion-back-button>
+        </ion-buttons>
         <ion-title>查找结果</ion-title>
     </ion-toolbar>
 </ion-header>
