--- a/src/app/tabs/lipstick-finder/search/search.page.html
+++ b/src/app/tabs/lipstick-finder/search/search.page.html
@@ -1,8 +1,9 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>
-            找口红
-        </ion-title>
+        <ion-buttons slot="start">
+            <ion-back-button text=""></ion-back-button>
+        </ion-buttons>
+        <ion-title>找口红</ion-title>
     </ion-toolbar>
 </ion-header>
 
