--- a/src/app/tabs/lipstick-finder/detail/detail.page.html
+++ b/src/app/tabs/lipstick-finder/detail/detail.page.html
@@ -1,6 +1,8 @@
 <ion-header>
     <ion-toolbar>
-        <ion-icon name="arrow-back" (click)="back()"></ion-icon>
+        <ion-buttons slot="start">
+            <ion-back-button text=""></ion-back-button>
+        </ion-buttons>
         <ion-title>口红信息</ion-title>
     </ion-toolbar>
 </ion-header>
