--- a/src/app/tabs/lipstick-finder/result/result.page.html
+++ b/src/app/tabs/lipstick-finder/result/result.page.html
@@ -28,6 +28,7 @@
                             <span>{{sku.skuName}} </span>
                             <span>{{sku.colorNo}}</span>
                         </div>
+                        <ion-img [src]="'/image/'+sku.figure"></ion-img>
                     </ion-card-content>
                 </ion-card>
             </a>
