--- a/src/app/tabs/my/my.page.html
+++ b/src/app/tabs/my/my.page.html
@@ -12,11 +12,11 @@
         <ion-row>
             <ion-col size="3">
                 <ion-avatar>
-                    <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+                    <img [src]="user.avatar">
                 </ion-avatar>
             </ion-col>
             <ion-col class="content-center">
-                <ion-text>test</ion-text>
+                <ion-text>{{user.name}}</ion-text>
             </ion-col>
         </ion-row>
     </ion-grid>
@@ -27,21 +27,24 @@
 
     <ng-template #favorites let-favorites>
         <ion-list>
-            <ion-item *ngFor="let favorite of favorites">
-                <ion-row class="full-width">
-                    <ion-col size="1">
-                        <div class="content-center color-block"
-                             [ngStyle]="{'background-color':favorite.color}">
-                        </div>
-                    </ion-col>
-                    <ion-col size="10">
-                        {{favorite.goodsName}} {{favorite.skuName}} {{favorite.colorNo}}
-                    </ion-col>
-                    <ion-col (click)="remove(favorite.id)">
-                        <ion-icon name="close" class="content-center"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-item>
+            <a *ngFor="let favorite of favorites" style="text-decoration:none"
+               [routerLink]="['/tabs/my/lipstick/detail',favorite.brandCode,favorite.skuCode]">
+                <ion-item>
+                    <ion-row class="full-width">
+                        <ion-col size="1">
+                            <div class="content-center color-block"
+                                 [ngStyle]="{'background-color':favorite.color}">
+                            </div>
+                        </ion-col>
+                        <ion-col size="10">
+                            {{favorite.goodsName}} {{favorite.skuName}} {{favorite.colorNo}}
+                        </ion-col>
+                        <ion-col (click)="remove(favorite.id)">
+                            <ion-icon name="close" class="content-center"></ion-icon>
+                        </ion-col>
+                    </ion-row>
+                </ion-item>
+            </a>
         </ion-list>
     </ng-template>
 </ion-content>
