--- a/src/app/tabs/common/sku-detail/sku-detail.component.html
+++ b/src/app/tabs/common/sku-detail/sku-detail.component.html
@@ -8,10 +8,8 @@
             <ion-item>
                 <ion-row class="full-width">
                     <ion-col size="2">口红</ion-col>
-                    <ion-col size="1">
-                        <div class="content-center color-block"
-                             [ngStyle]="{'background-color':sku.color}">
-                        </div>
+                    <ion-col size="2">
+                        <color-card [color]="sku.color" [color1]="sku.color1"></color-card>
                     </ion-col>
                     <ion-col class="ion-text-center">
                         {{sku.goodsName}} {{sku.skuName}} {{sku.colorNo}}
@@ -21,10 +19,8 @@
             <ion-item>
                 <ion-row class="full-width">
                     <ion-col size="2">色号</ion-col>
-                    <ion-col size="1">
-                        <div class="content-center color-block"
-                             [ngStyle]="{'background-color':sku.color}">
-                        </div>
+                    <ion-col size="2">
+                        <color-card [color]="sku.color" [color1]="sku.color1"></color-card>
                     </ion-col>
                     <ion-col class="ion-text-center">
                         {{sku.color.replace("#", "")|uppercase}}
