--- a/src/app/tabs/my/main/main.page.html
+++ b/src/app/tabs/my/main/main.page.html
@@ -31,9 +31,7 @@
             <ion-item *ngFor="let favorite of favorites">
                 <ion-row class="full-width">
                     <ion-col size="1">
-                        <div class="content-center color-block"
-                             [ngStyle]="{'background-color':favorite.color}">
-                        </div>
+                        <color-card [color]="favorite.color" [color1]="favorite.color1"></color-card>
                     </ion-col>
                     <ion-col size="10">
                         <a [routerLink]="['/tabs/my/detail',favorite.brandCode,favorite.skuCode]">
