修复样式问题

--- a/src/app/tabs/common/sku-detail/sku-detail.component.html
+++ b/src/app/tabs/common/sku-detail/sku-detail.component.html
@@ -27,7 +27,7 @@
             <ion-item>
                 <ion-row class="full-width">
                     <ion-col class="ion-text-center">
-                        <color-card style="vertical-align:sub" [color]="sku.color" [color1]="sku.color1"></color-card>
+                        <color-card class="color-card " [color]="sku.color" [color1]="sku.color1"></color-card>
                         &nbsp;&nbsp;
                         <span>{{sku.color.replace("#", "")|uppercase}}</span>
                     </ion-col>
