--- a/src/app/tabs/common/color-card/color-card.component.html
+++ b/src/app/tabs/common/color-card/color-card.component.html
@@ -1,11 +1,15 @@
 <ng-container *ngIf="color1; then double_color else single_color "></ng-container>
 
 <ng-template #double_color>
-    <div class="content-center half-color-block" [ngStyle]="{'background-color':color}"></div>
-    <div class="content-center half-color-block" [ngStyle]="{'background-color':color1}"></div>
+    <div class="color-block-flex">
+        <div class="half-color-block" [ngStyle]="{'background-color':color}"></div>
+        <div class="half-color-block" [ngStyle]="{'background-color':color1}"></div>
+    </div>
 </ng-template>
 
 <ng-template #single_color>
-    <div class="content-center color-block" [ngStyle]="{'background-color':color}"></div>
+    <div class="color-block-flex">
+        <div class="color-block" [ngStyle]="{'background-color':color}"></div>
+    </div>
 </ng-template>
 
