--- a/src/app/tabs/common/color-card/color-card.component.scss
+++ b/src/app/tabs/common/color-card/color-card.component.scss
@@ -1,13 +1,19 @@
 $block-height: 1.5rem;
 
+.color-block-flex {
+  height:100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .color-block {
-  display: inline-block;
   width: $block-height;
   height: $block-height
 }
 
 .half-color-block {
-  display: inline-block;
   width: $block-height/2;
   height: $block-height
 }
