--- a/src/app/tabs/common/color-card/color-card.component.html
+++ b/src/app/tabs/common/color-card/color-card.component.html
@@ -9,7 +9,7 @@
 
 <ng-template #single_color>
     <div class="color-block-flex">
-        <div class="color-block" [ngStyle]="{'background-color':color}"></div>
+        <div class="color-block mouth" [ngStyle]="{'background-color':color}"></div>
     </div>
 </ng-template>
 
