--- a/src/app/tabs/common/sku-detail/sku-detail.component.html
+++ b/src/app/tabs/common/sku-detail/sku-detail.component.html
@@ -29,7 +29,7 @@
                     <ion-col class="ion-text-center">
                         <color-card class="color-card " [color]="sku.color" [color1]="sku.color1"></color-card>
                         &nbsp;&nbsp;
-                        <span>{{sku.color.replace("#", "")|uppercase}}</span>
+                        <span>色卡：{{sku.color.replace("#", "")|uppercase}}</span>
                     </ion-col>
                 </ion-row>
             </ion-item>
